Grid Layout Mobile

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <section class="grid-section">
       <div class="container">
         <div class="row">
-          <div class="grid-section__item order-2">
+          <div class="grid-section__item order-md-2" desktop-bg="./assets/images/desktop/image-transform.jpg"
+            mobile-bg="./assets/images/mobile/image-transform.jpg"></div>
+          <div class="grid-section__item order-md-1">
             <h3 class="title-text">
               Transform your brand
             </h3>
@@ -53,10 +55,8 @@
               We are a full-service creative agency specializing in helping brands grow fast.
               Engage your clients through compelling visuals that do most of the marketing for you.
             </p>
-            <a href="javascript:void(0)" class="btn btn__red">Learn more</a>
+            <a href="javascript:void(0)" class="btn btn__yellow">Learn more</a>
           </div>
-          <div class="grid-section__item order-1" desktop-bg="./assets/images/desktop/image-transform.jpg"
-            mobile-bg="./assets/images/mobile/image-transform.jpg"></div>
           <div class="grid-section__item" desktop-bg="./assets/images/desktop/image-stand-out.jpg"
             mobile-bg="./assets/images/mobile/image-stand-out.jpg"></div>
           <div class="grid-section__item">
@@ -70,7 +70,8 @@
             </p>
             <a href="javascript:void(0)" class="btn btn__red">Learn more</a>
           </div>
-          <div class="grid-section__item" desktop-bg="./assets/images/desktop/image-graphic-design.jpg"
+          <div class="grid-section__item grid-section__item--has-text"
+            desktop-bg="./assets/images/desktop/image-graphic-design.jpg"
             mobile-bg="./assets/images/mobile/image-graphic-design.jpg">
             <h3 class="title-text">
               Graphic design
@@ -80,7 +81,8 @@
               potential clients’ attention.
             </p>
           </div>
-          <div class="grid-section__item" desktop-bg="./assets/images/desktop/image-photography.jpg"
+          <div class="grid-section__item grid-section__item--has-text"
+            desktop-bg="./assets/images/desktop/image-photography.jpg"
             mobile-bg="./assets/images/mobile/image-photography.jpg">
             <h3 class="title-text">
               Photography
