Grid Layout Mobile v3

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
             <a href="javascript:void(0)" class="btn btn__red">Learn more</a>
           </div>
-          <div class="grid-section__item grid-section__item--has-text"
+          <div class="grid-section__item grid-section__item--has-text graph-color"
             desktop-bg="./assets/images/desktop/image-graphic-design.jpg"
             mobile-bg="./assets/images/mobile/image-graphic-design.jpg">
             <h3 class="title-text">
@@ -81,7 +81,7 @@
               potential clients’ attention.
             </p>
           </div>
-          <div class="grid-section__item grid-section__item--has-text"
+          <div class="grid-section__item grid-section__item--has-text photo-color"
             desktop-bg="./assets/images/desktop/image-photography.jpg"
             mobile-bg="./assets/images/mobile/image-photography.jpg">
             <h3 class="title-text">
