--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header desktop-bg="./assets/images/desktop/image-header.jpg" mobile-bg="./assets/images/mobile/image-header.jpg">
     <!-- Main Navigation Start -->
     <nav>
-      <a href="./index.html" class="site-name">sunnyside</a>
+      <a href="./index.html" class="site-name"><img src="./assets/images/logo.svg" alt="Logo"></a>
       <a href="javascript:void(0)" class="mobile-toggle">
         <img src="./assets/images/icon-hamburger.svg" alt="Hamburger">
       </a>
@@ -45,9 +45,9 @@
     <section class="grid-section">
       <div class="container">
         <div class="row">
-          <div class="grid-section__item order-md-2" desktop-bg="./assets/images/desktop/image-transform.jpg"
+          <div class="grid-section__item" desktop-bg="./assets/images/desktop/image-transform.jpg"
             mobile-bg="./assets/images/mobile/image-transform.jpg"></div>
-          <div class="grid-section__item order-md-1">
+          <div class="grid-section__item">
             <h3 class="title-text">
               Transform your brand
             </h3>
@@ -159,16 +159,22 @@
     <!-- Testimonial End -->
     <!-- Footer Images Start -->
     <section class="footer-image-section">
-      <div class="footer-image-section__item"></div>
-      <div class="footer-image-section__item"></div>
-      <div class="footer-image-section__item"></div>
-      <div class="footer-image-section__item"></div>
+      <div class="footer-image-section__item" desktop-bg="./assets/images/desktop/image-gallery-milkbottles.jpg"
+        mobile-bg="./assets/images/mobile/image-gallery-milkbottles.jpg"></div>
+      <div class="footer-image-section__item" desktop-bg="./assets/images/desktop/image-gallery-orange.jpg"
+        mobile-bg="./assets/images/mobile/image-gallery-orange.jpg"></div>
+      <div class="footer-image-section__item" desktop-bg="./assets/images/desktop/image-gallery-cone.jpg"
+        mobile-bg="./assets/images/mobile/image-gallery-cone.jpg"></div>
+      <div class="footer-image-section__item" desktop-bg="./assets/images/desktop/image-gallery-sugarcubes.jpg"
+        mobile-bg="./assets/images/mobile/image-gallery-sugar-cubes.jpg"></div>
     </section>
     <!-- Footer Images End -->
   </main>
   <!-- Footer Start -->
   <footer class="footer">
-    <div class="footer__site-name">sunnyside</div>
+    <div class="footer__site-name">
+      <img src="./assets/images/logo-foot.svg" alt="">
+    </div>
     <ul class="footer__menu">
       <li><a href="javascript:void(0)" class="footer__menu--link">About</a></li>
       <li><a href="javascript:void(0)" class="footer__menu--link">Services</a></li>
